# nanocode

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Tool/optimized_agent_tools/: README.md  pyproject.toml
Tool/optimized_agent_tools/agent_tools/: __init__.py  audit.py  base.py  cache.py  registry.py  sandbox.py  types.py  utils.py  webfetch.py  websearch.py
Tool/optimized_agent_tools/examples/: demo.py
Tool/optimized_agent_tools/tests/: test_tools.py
agent_loop/: plan_todo_agent_research.md
agent_loop/plan_todo_agent/: README.md  pyproject.toml
agent_loop/plan_todo_agent/plan_todo_agent/: __init__.py
agent_loop/plan_todo_agent/plan_todo_agent/core/: interfaces.py  prompts.py  schemas.py
agent_loop/plan_todo_agent/plan_todo_agent/examples/: demo_offline.py  payload_showcase.py
agent_loop/plan_todo_agent/plan_todo_agent/planning/: __init__.py  critic.py  engine.py  projector.py
agent_loop/plan_todo_agent/plan_todo_agent/providers/: __init__.py  anthropic_like.py  openai_chat_like.py  openai_responses.py
agent_loop/plan_todo_agent/plan_todo_agent/renderers/: __init__.py  chatgpt.py  claude_code.py
agent_loop/plan_todo_agent/plan_todo_agent/skills/: __init__.py  base.py  repository_refactor.py
agent_loop/plan_todo_agent/tests/: test_bootstrap.py
auchestor/progressive_disclosure_bundle/: README.md  RESEARCH_REPORT.md  pyproject.toml
auchestor/progressive_disclosure_bundle/examples/: demo.py
auchestor/progressive_disclosure_bundle/src/progressive_disclosure/: __init__.py  abstractions.py  domain.py  engine.py  events.py  novelty.py  policies.py  providers.py  renderers.py  sinks.py
auchestor/progressive_disclosure_bundle/tests/: test_engine.py
docs/: architecture.md  debugging.md
mcp/: README (1).md  fastapi_server.py
mcp/mcp_polyglot/: pyproject.toml
mcp/mcp_polyglot/mcp_polyglot/: __init__.py
mcp/mcp_polyglot/mcp_polyglot/adapters/: anthropic_adapter.py  base.py  deepseek_adapter.py  glm_adapter.py  kimi_adapter.py  minimax_adapter.py  openai_adapter.py  openai_compat_adapter.py
mcp/mcp_polyglot/mcp_polyglot/core/: protocol.py  server.py  tool.py
mcp/mcp_polyglot/mcp_polyglot/examples/: demo_protocol.py  demo_requests.py  weather_tool.py
memory/agent_memory_os_pkg/: README.md  pyproject.toml
memory/agent_memory_os_pkg/agent_memory_os/: __init__.py  base.py  claude_code.py  compaction.py  compiler.py  indexing.py  models.py  orchestrator.py  store.py  utils.py  writer.py
memory/agent_memory_os_pkg/agent_memory_os/providers/: __init__.py  anthropic.py  compatible.py  openai.py  registry.py  runtimes.py
memory/agent_memory_os_pkg/examples/: demo_provider_calls.py  demo_research_grade_memory.py
memory/agent_memory_pkg/: README.md  pyproject.toml
memory/agent_memory_pkg/agent_memory/: __init__.py  base.py  cache.py  claude_code_memory.py  compression.py  manager.py  memory_store.py  models.py
memory/agent_memory_pkg/agent_memory/providers/: __init__.py  anthropic_adapter.py  deepseek_adapter.py  glm_adapter.py  kimi_adapter.py  minimax_adapter.py  openai_adapter.py  registry.py
memory/agent_memory_pkg/examples/: demo_chat_loop.py  demo_provider_payloads.py
skills/multi_vendor_skills_project/: OFFICIAL_DOCS_SUMMARY.md  README.md  RESEARCH_NOTES.md  pyproject.toml
skills/multi_vendor_skills_project/multi_vendor_skills/: __init__.py  cli.py  models.py  yaml_utils.py
skills/multi_vendor_skills_project/multi_vendor_skills/examples/: weather_skill.py
skills/multi_vendor_skills_project/multi_vendor_skills/renderers/: __init__.py  agent_skills.py  anthropic_tools.py  base.py  claude_subagent.py  openai_tools.py
skills/multi_vendor_skills_project/multi_vendor_skills/runtimes/: __init__.py  anthropic_runtime.py  openai_runtime.py
skills/multi_vendor_skills_project/scripts/: generate_examples.py
src/nanocli/: __init__.py  auth.py  cli.py  config.py  mcp_client.py  memory_runtime.py  models.py  paths.py  provider_loop.py  runtime.py  skills_runtime.py  sqlite_memory.py  storage.py  subagents_runtime.py  tool_runtime.py  tui.py
src/nanocli/tools/: __init__.py  builtin.py
sub_agent/subagent_research/: README.md  research_report.md
sub_agent/subagent_research/examples/: demo_subagent.py  provider_artifacts.json
sub_agent/subagent_research/subagent_framework/: __init__.py  abstractions.py  memory.py  models.py  orchestrator.py  router.py
sub_agent/subagent_research/subagent_framework/agents/: __init__.py  research_subagent.py
sub_agent/subagent_research/subagent_framework/providers/: __init__.py  base.py  claude_code.py  (+5 more)
tasks/: lessons.md  todo.md
tests/: test_alignment_runtime.py  test_cli.py  test_config.py  test_live_smoke.py  test_provider_loop.py  test_runtime.py  test_skills_runtime.py  test_sqlite_memory.py  test_storage.py  test_subagents_runtime.py
tool_use/multi_provider_tooluse_demo/: README.md  __init__.py  agent.py  models.py  providers.py  tools.py  transports.py
tool_use/multi_provider_tooluse_demo/adapters/: __init__.py  anthropic_messages.py  base.py  openai_chat.py  openai_responses.py
tool_use/multi_provider_tooluse_demo/examples/: demo.py
tool_use/multi_provider_tooluse_demo/tests/: self_test.py
tool_use/optimized_agent_tools/: README.md  research_report_2026-03-23.md
tool_use/optimized_agent_tools/agent_tools/: __init__.py  bash.py  content_pipeline.py  policy.py  search_filters.py  webfetch.py  websearch.py
tool_use/optimized_agent_tools/examples/: demo.py
tool_use/optimized_agent_tools/tests/: test_tools.py
