[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimized-agent-tools"
version = "0.1.0"
description = "Policy-first Bash, WebSearch, and WebFetch tools for coding agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI ChatGPT" }]
license = { text = "MIT" }
keywords = ["agent", "bash", "websearch", "webfetch", "sandbox", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_tools*"]
