[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-polyglot"
version = "0.1.0"
description = "A standard MCP server core with vendor-specific adapters."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
