[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-pkg"
version = "0.1.0"
description = "Unified agent memory layer with cache optimization and provider adapters"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_memory*"]
